dark mode and printing working

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -127,7 +127,7 @@
     <!-- Footer -->
     <footer class="bg-body-tertiary border-top py-4 mt-5">
         <div class="container text-center">
-            <p class="mb-0 text-body-secondary">&copy; 2026 H2 System - Health & Hostel Management System</p>
+            <p class="mb-0 text-body-secondary">&copy; <span id="this_year"></span> Nandigiri Campus - Holistic Health Digital Companian</p>
         </div>
     </footer>
 
