--- a/app/templates/health/medicine_batches.html
+++ b/app/templates/health/medicine_batches.html
@@ -87,8 +87,8 @@
                     </div>
                     <div class="col-md-3">
                         <div class="stat-item">
-                            <div class="stat-value">{{ medicine.quantity }}</div>
-                            <div class="stat-label">Total Stock</div>
+                            <div class="stat-value">{{ medicine.total_batch_quantity }}</div>
+                            <div class="stat-label">Total Stock (Non-Expired)</div>
                         </div>
                     </div>
                     <div class="col-md-3">
