--- a/app/templates/stock/low_stock_alerts.html
+++ b/app/templates/stock/low_stock_alerts.html
@@ -29,7 +29,7 @@
                             <td>{{ medicine.name }}</td>
                             <td>{{ medicine.generic_name or 'N/A' }}</td>
                             <td>{{ medicine.dosage }}</td>
-                            <td>{{ medicine.quantity }}</td>
+                            <td>{{ medicine.total_batch_quantity }}</td>
                             <td>{{ medicine.min_stock_level }}</td>
                             <td>{{ medicine.supplier or 'N/A' }}</td>
                             <td>
