--- a/app/templates/health/view_visit.html
+++ b/app/templates/health/view_visit.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="table-responsive">
                     <table class="table table-hover mb-0">
-                        <thead class="table-light">
+                        <thead class="table-dark">
                             <tr>
                                 <th>Prescription ID</th>
                                 <th>Medicines</th>
