--- a/app/templates/health/print_prescription.html
+++ b/app/templates/health/print_prescription.html
@@ -7,7 +7,7 @@
     @media print {
         body {
             margin: 0;
-            margin-top: -40px;
+            margin-top: -55px;
             padding: 0;
             background: white;
         }
@@ -19,11 +19,21 @@
         .print-container {
             width: 100% !important;
             max-width: 100% !important;
-            height: 78mm !important;
+            height: 100vh !important;
             margin: 0 !important;
-            padding: 0 !important;
+            padding: 5mm !important;
             box-shadow: none !important;
             page-break-after: always !important;
+            display: flex !important;
+            flex-direction: column !important;
+        }
+
+        .print-content {
+            flex: 1 !important;
+        }
+
+        .signature-section {
+            margin-top: auto !important;
         }
 
         @page {
@@ -37,7 +47,7 @@
         width: 100%;
         color: #000;
         max-width: 100mm;
-        /* height:78mm; */
+        height: 78mm;
         margin: 0 auto;
         padding: 5mm;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -58,8 +68,9 @@
     .institute-name {
         font-size: 12px;
         font-weight: bold;
-        margin: 0;
+        margin: 0 0px 0px 0;
         letter-spacing: 0.5px;
+        white-space: nowrap;
     }
 
     .hostel-name {
@@ -146,7 +157,7 @@
 
     /* Signature Section */
     .signature-section {
-        margin-top: 75mm;
+        margin-top: auto;
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 4px;
